--- a/html/search.html
+++ b/html/search.html
@@ -65,7 +65,7 @@
 
             <div class="mb-3">
                 <label for="password" class="form-label">Введите вид животного:</label>
-                <input type="password" class="form-control" id="password">
+                <input type="text" class="form-control" id="password">
 
             </div>
 
