--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               <option value="Собака"/>
               <option value="Корова"/>
               <option value="Крокодил"/>
+              <option value="Сова"/>
             </datalist>
           </form>
         </div>
