--- a/html/auth.html
+++ b/html/auth.html
@@ -14,7 +14,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../image/logo.jpg" class="w-25 rounded-3" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="../image/logotype.svg" class="rounded-3" style="max-width: 300px;" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                    <button class="btn btn-primary" onclick="">Поиск</button>
+                    <button class="btn btn-warning" onclick="">Поиск</button>
                 </form>
             </div>
         </div>
@@ -46,7 +46,7 @@
 </header>
 
 <main style="min-height: 70vh;">
-    <h2 class="text-center text-white bg-primary m-2">Аутентификация</h2>
+    <h2 class="text-center text-white bg-warning m-2">Аутентификация</h2>
     <div class="p-3">
         <form class="w-50 m-auto border p-3" style="min-width: 300px;">
 
@@ -62,12 +62,12 @@
                 <div  class="form-text">Не менее 7 символов, обязательно: 1 - цифра, 1 - строчная буква, 1 - заглавная буква</div>
             </div>
 
-            <input type="submit" class="btn btn-primary" value="Войти">
+            <input type="submit" class="btn btn-warning" value="Войти">
         </form>
     </div>
 </main>
 
-<footer class="border-bottom bg-primary">
+<footer class="border-bottom bg-warning">
     <p class="text-white p-3">GET PET BACK © Copyright, 2022</p>
     <p class="text-white p-3">Все права защищены</p>
 </footer>
