--- a/html/pet.html
+++ b/html/pet.html
@@ -14,7 +14,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../image/logo.jpg" class="w-25 rounded-3" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="../image/logotype.svg" class="rounded-3" style="max-width: 300px;" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                    <button class="btn btn-primary" onclick="">Поиск</button>
+                    <button class="btn btn-warning" onclick="">Поиск</button>
                 </form>
             </div>
         </div>
@@ -46,47 +46,47 @@
 </header>
 
 <main style="min-height: 70vh;">
-    <h2 class="text-center text-white bg-primary m-2">Карточка животного</h2>
+    <h2 class="text-center text-white bg-warning m-2">Карточка животного</h2>
 
 
-        <div class="d-flex flex-row flex-wrap border  border-primary m-auto  p-3 position-relative w-50" style="min-width: 300px;">
+        <div class="d-flex flex-row flex-wrap border  border-warning m-auto  p-3 position-relative w-50" style="min-width: 300px;">
            <div class="d-flex flex-row flex-wrap justify-content-around border border">
                <img src="../image/pets/курица1.jpg" class="w-25 p-3" style="min-width: 250px;" alt="Изображения животного">
                <img src="../image/pets/курица2.jpg" class="w-25 p-3" style="min-width: 250px;" alt="Изображения животного">
                <img src="../image/pets/курица3.jpg"  class="w-25 p-3" style="min-width: 250px;" alt="Изображения животного">
            </div>
-            <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">id:</p>
             <p class="w-50" style="min-width: 250px;">14</p>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">Имя:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">Имя:</p>
             <p class="w-50" style="min-width: 250px;"> Иван</p>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">Телефон:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">Телефон:</p>
             <p class="w-50" style="min-width: 250px;">+7-921-485-65-44</p>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">E-mail:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">E-mail:</p>
             <p class="w-50" style="min-width: 250px;">my_chiken@mail.ru</p>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">Вид животного:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">Вид животного:</p>
             <p class="w-50" style="min-width: 250px;"> Курица</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Описание:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Описание:</p>
             <p class="w-50" style="min-width: 300px;">Потерялась курица, пятнистая, рыжая. Любит играть, ласковая.</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Номер чипа:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Номер чипа:</p>
             <p class="w-50" style="min-width: 300px;">ch-001-spb</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Район:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Район:</p>
             <p class="w-50" style="min-width: 300px;">Невский</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Дата:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Дата:</p>
             <p class="w-50" style="min-width: 300px;">29-03-2020</p>
         </div>
 <br>
 
 </main>
 
-<footer class="border-bottom bg-primary">
+<footer class="border-bottom bg-warning">
     <p class="text-white p-3">GET PET BACK © Copyright, 2022</p>
     <p class="text-white p-3">Все права защищены</p>
 </footer>
