--- a/html/edit_pet.html
+++ b/html/edit_pet.html
@@ -15,7 +15,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../image/logo.jpg" class="w-25 rounded-3" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="../image/logotype.svg" class="rounded-3" style="max-width: 300px;" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,7 +39,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                    <button class="btn btn-primary" onclick="">Поиск</button>
+                    <button class="btn btn-warning" onclick="">Поиск</button>
                 </form>
             </div>
         </div>
@@ -47,9 +47,9 @@
 </header>
 
 <main style="min-height: 70vh;">
-    <h2 class="text-center text-white bg-primary m-2">Редактирование объявления</h2>
+    <h2 class="text-center text-white bg-warning m-2">Редактирование объявления</h2>
     <div class="p-3">
-        <form class="w-50 m-auto border border-primary p-3" style="min-width: 300px;">
+        <form class="w-50 m-auto border border-warning p-3" style="min-width: 300px;">
 
             <div class="mb-3">
                 <label for="kind" class="form-label">Введите вид животного:</label>
@@ -80,12 +80,12 @@
             </div>
 
 
-            <input type="submit" class="btn btn-primary form-control" value="Отправить">
+            <input type="submit" class="btn btn-warning form-control" value="Отправить">
         </form>
     </div>
 </main>
 
-<footer class="border-bottom bg-primary">
+<footer class="border-bottom bg-warning">
     <p class="text-white p-3">GET PET BACK © Copyright, 2022</p>
     <p class="text-white p-3">Все права защищены</p>
 </footer>
