--- a/html/orders.html
+++ b/html/orders.html
@@ -14,7 +14,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../image/logo.jpg" class="w-25 rounded-3" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="../image/logotype.svg" class="rounded-3" style="max-width: 300px;" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                    <button class="btn btn-primary" onclick="">Поиск</button>
+                    <button class="btn btn-warning" onclick="">Поиск</button>
                 </form>
             </div>
         </div>
@@ -46,54 +46,54 @@
 </header>
 
 <main style="min-height: 70vh;">
-    <h2 class="text-center text-white bg-primary m-2">Результаты поиска</h2>
+    <h2 class="text-center text-white bg-warning m-2">Результаты поиска</h2>
     <div class="d-flex flex-row flex-wrap">
         <div class="d-flex flex-row flex-wrap border m-3 p-3" style="min-width: 300px; width: 45%;">
             <img src="../image/pets/кошка.jpg" class="w-75" alt="рисунок животного">
-            <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">id:</p>
             <p class="w-50" style="min-width: 250px;">14</p>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">Вид животного:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">Вид животного:</p>
             <p class="w-50" style="min-width: 250px;"> Кошка</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Описание:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Описание:</p>
             <p class="w-50" style="min-width: 300px;">Потерялась кошка, пушистая, серая. Любит играть, ласковая.</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Номер чипа:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Номер чипа:</p>
             <p class="w-50" style="min-width: 300px;">ca-001-spb</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Район:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Район:</p>
             <p class="w-50" style="min-width: 300px;">Василиостровский</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Дата:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Дата:</p>
             <p class="w-50" style="min-width: 300px;">24-03-2020</p>
         </div>
         <div class="d-flex flex-row flex-wrap border m-3 p-3" style="min-width: 300px; width: 45%;">
             <img src="../image/pets/коза.jpeg" class="w-75" alt="рисунок животного">
-            <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">id:</p>
             <p class="w-50" style="min-width: 250px;">18</p>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">Вид животного:</p>
+            <p class="w-50 text-warning" style="min-width: 250px;">Вид животного:</p>
             <p class="w-50" style="min-width: 250px;"> Коза</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Описание:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Описание:</p>
             <p class="w-50" style="min-width: 300px;">Потерялась коза, последний раз видели в здании Московского вокзала
             г. Санкт-Петербург. Коза белая, пуховая.</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Номер чипа:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Номер чипа:</p>
             <p class="w-50" style="min-width: 300px;">go-011-spb</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Район:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Район:</p>
             <p class="w-50" style="min-width: 300px;">Центральный</p>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Дата:</p>
+            <p class="w-50 text-warning" style="min-width: 300px;">Дата:</p>
             <p class="w-50" style="min-width: 300px;">14-03-2022</p>
         </div>
     </div>
 
 </main>
 
-<footer class="border-bottom bg-primary">
+<footer class="border-bottom bg-warning">
     <p class="text-white p-3">GET PET BACK © Copyright, 2022</p>
     <p class="text-white p-3">Все права защищены</p>
 </footer>
