--- a/html/profile.html
+++ b/html/profile.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
     <!-- Обязательные метатеги -->
     <meta charset="utf-8">
@@ -9,169 +10,208 @@
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <title>GET PET BACK</title>
+
+    <style>
+        .d-flex {
+            margin-left: 10px;
+            margin-bottom: 10px;;
+        }
+    </style>
 </head>
+
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../image/logo.jpg" class="w-25 rounded-3" alt="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../html/profile.html">Личный кабинет</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../html/registration.html">Регистрация</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../html/add_pet.html">Добавить объявление</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../html/search.html">Поиск по объявлениям</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img src="../image/logotype.svg" class="rounded-3" style="max-width: 300px;" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/profile.html">Личный кабинет</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/registration.html">Регистрация</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/add_pet.html">Добавить объявление</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/search.html">Поиск по объявлениям</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
+                        <button class="btn btn-warning" onclick="">Поиск</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main style="min-height: 70vh;">
+        <h2 class="text-center text-white bg-warning m-2">Личный кабинет</h2>
+        <div class="p-3">
+            <div class="d-flex flex-row flex-wrap border m-auto p-3 w-50" style="min-width: 300px;">
+
+                <p class="w-50 text-warning" style="min-width: 250px;">id:</p>
+                <p class="w-50" style="min-width: 250px;">14</p>
+
+                <p class="w-50 text-warning" style="min-width: 250px;">Телефон:</p>
+                <p class="w-50" style="min-width: 250px;">+7-911-456-78-78</p>
+
+                <p class="w-50 text-warning" style="min-width: 300px;">email:</p>
+                <p class="w-50" style="min-width: 300px;">leonid@yandex.ru</p>
+
+                <p class="w-50 text-warning" style="min-width: 300px;">Имя:</p>
+                <p class="w-50" style="min-width: 300px;">Леонид</p>
+
+                <p class="w-50 text-warning" style="min-width: 300px;">Дата регистрации:</p>
+                <p class="w-50" style="min-width: 300px;">26-06-2015</p>
+
+                <p class="w-50 text-warning" style="min-width: 300px;">Количество найденных животных:</p>
+                <p class="w-50" style="min-width: 300px;">2</p>
+
+                <p class="w-50 text-warning" style="min-width: 300px;">Количество объявлений:</p>
+                <p class="w-50" style="min-width: 300px;">4</p>
+
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
-                    <button class="btn btn-primary" onclick="">Поиск</button>
+                    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Сменить номер телефона
+                    </button>
                 </form>
+
+                <form class="d-flex">
+                    <button type="button" class="btn btn-warning" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal2">
+                        Сменить эл. адрес
+                    </button>
+                </form>
+
+                <form class="d-flex">
+                    <button onclick="location.href='watch_pet.html'" type="button" class="btn btn-warning" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal2">
+                        Просмотреть добавленные объявления
+                    </button>
+                </form>
+
             </div>
         </div>
-    </nav>
-</header>
+    </main>
 
-<main style="min-height: 70vh;">
-    <h2 class="text-center text-white bg-primary m-2">Личный кабинет</h2>
-<div class="p-3">
-        <div class="d-flex flex-row flex-wrap border m-auto p-3 w-50" style="min-width: 300px;">
+    <footer class="border-bottom bg-warning">
+        <p class="text-white p-3">GET PET BACK © Copyright, 2022</p>
+        <p class="text-white p-3">Все права защищены</p>
+    </footer>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
-            <p class="w-50" style="min-width: 250px;">14</p>
 
-            <p class="w-50 text-primary" style="min-width: 250px;">Телефон:</p>
-            <p class="w-50" style="min-width: 250px;">+7-911-456-78-78</p>
+    <!-- Модальное окно -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Смена электронной почты</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label style="margin-bottom: 5px;" for="exampleInputEmail1">Пожалуйста, выберите причину смены номера телефона</label>
+                            <select style="font-size: medium;" class="form-select form-select-lg mb-3" aria-label=".form-select-lg пример">
+                                <option selected>Выбрать причину</option>
+                                <option value="1">Поменял(а) эл.почту</option>
+                                <option value="2">Потерял(а) доступ</option>
+                                <option value="3">Другое</option>
+                            </select>
+                        </div>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">email:</p>
-            <p class="w-50" style="min-width: 300px;">leonid@yandex.ru</p>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Укажите ваш старый номер телефона</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Это делается для вашей безопасности
+                            </div>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Укажите ваш новый номер телефона</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">На номер придет SMS с подтверждением
+                            </div>
+                        </div>
 
-            <p class="w-50 text-primary" style="min-width: 300px;">Имя:</p>
-            <p class="w-50" style="min-width: 300px;">Леонид</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Дата регистрации:</p>
-            <p class="w-50" style="min-width: 300px;">26-06-2015</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Количество найденных животных:</p>
-            <p class="w-50" style="min-width: 300px;">2</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Количество объявлений:</p>
-            <p class="w-50" style="min-width: 300px;">4</p>
-        </div>
-</div>
-
-    <h2 class="text-center text-white bg-primary m-2">Изменить адрес электронной почты</h2>
-    <form class="w-50 m-auto p-3" style="min-width: 300px;">
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Введите адрес электронной почты</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div  class="form-text">Мы никогда не делимся Вашими e-mail ни с кем.</div>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Отправить</button>
-    </form>
-
-    <h2 class="text-center text-white bg-primary m-2">Изменить номер телефона</h2>
-    <form class="w-50 m-auto p-3" style="min-width: 300px;">
-        <div class="mb-3">
-            <label for="phone" class="form-label">Введите номер телефона</label>
-            <input type="tel" class="form-control" id="phone" aria-describedby="emailHelp">
-            <div class="form-text">Используйте цифры, +, -.</div>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Отправить</button>
-    </form>
-
-    <h2 class="text-center text-white bg-primary m-2">Добавленные объявления</h2>
-    <div class="d-flex flex-row flex-wrap">
-        <div class="d-flex flex-row flex-wrap border m-3 p-3 position-relative" style="min-width: 300px; width: 45%;">
-            <img src="../image/pets/кошка.jpg" class="w-75" alt="рисунок животного">
-            <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
-            <p class="w-50" style="min-width: 250px;">14</p>
-
-            <p class="w-50 text-primary" style="min-width: 250px;">Вид животного:</p>
-            <p class="w-50" style="min-width: 250px;"> Кошка</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Описание:</p>
-            <p class="w-50" style="min-width: 300px;">Потерялась кошка, пушистая, серая. Любит играть, ласковая.</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Номер чипа:</p>
-            <p class="w-50" style="min-width: 300px;">ca-001-spb</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Район:</p>
-            <p class="w-50" style="min-width: 300px;">Василиостровский</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Дата:</p>
-            <p class="w-50" style="min-width: 300px;">24-03-2020</p>
-            <div class="position-absolute text-danger" style="top:15px; right: 15px; cursor: pointer;">&#10060;</div>
-            <button type="submit" class="btn btn-primary">Редактировать объявление</button>
-        </div>
-        <div class="d-flex flex-row flex-wrap border m-3 p-3 position-relative" style="min-width: 300px; width: 45%;">
-            <img src="../image/pets/коза.jpeg" class="w-75" alt="рисунок животного">
-            <p class="w-50 text-primary" style="min-width: 250px;">id:</p>
-            <p class="w-50" style="min-width: 250px;">18</p>
-
-            <p class="w-50 text-primary" style="min-width: 250px;">Вид животного:</p>
-            <p class="w-50" style="min-width: 250px;"> Коза</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Описание:</p>
-            <p class="w-50" style="min-width: 300px;">Потерялась коза, последний раз видели в здании Московского вокзала
-                г. Санкт-Петербург. Коза белая, пуховая.</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Номер чипа:</p>
-            <p class="w-50" style="min-width: 300px;">go-011-spb</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Район:</p>
-            <p class="w-50" style="min-width: 300px;">Центральный</p>
-
-            <p class="w-50 text-primary" style="min-width: 300px;">Дата:</p>
-            <p class="w-50" style="min-width: 300px;">14-03-2022</p>
-            <div class="position-absolute text-danger" style="top:15px; right: 15px; cursor: pointer;">&#10060;</div>
-            <button type="submit" class="btn btn-primary">Редактировать объявление</button>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Укажите пароль</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <button type="submit" class="btn btn-warning">Сменить</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
-    <nav aria-label="Page navigation example" class="m-3">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</main>
 
-<footer class="border-bottom bg-primary">
-    <p class="text-white p-3">GET PET BACK © Copyright, 2022</p>
-    <p class="text-white p-3">Все права защищены</p>
-</footer>
+    <!-- Модальное окно -->
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Смена номера телефона</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label style="margin-bottom: 5px;" for="exampleInputEmail1">Пожалуйста, выберите причину смены электронного адреса</label>
+                            <select style="font-size: medium;" class="form-select form-select-lg mb-3" aria-label=".form-select-lg пример">
+                                <option selected>Выбрать причину</option>
+                                <option value="1">Поменял(а) эл.почту</option>
+                                <option value="2">Потерял(а) доступ</option>
+                                <option value="3">Другое</option>
+                            </select>
+                        </div>
 
-<!-- Дополнительный JavaScript; выберите один из двух! -->
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Укажите ваш старый адрес электронной почты</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Это делается для вашей безопасности
+                            </div>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Укажите ваш новый адрес электронной почты</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">На почту придет письмо с подтверждением
+                            </div>
+                        </div>
 
-<!-- Вариант 1: Bootstrap в связке с Popper -->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
-<script src="../js/bootstrap.bundle.min.js"></script>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Укажите пароль</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <button type="submit" class="btn btn-warning">Сменить</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Дополнительный JavaScript; выберите один из двух! -->
+
+    <!-- Вариант 1: Bootstrap в связке с Popper -->
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>-->
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
